# Quadratic-sieve

./: Cargo.toml  README.md
src/: factoring.rs  main.rs
