[package]
name = "project1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
primes = "0.3.0"
num-bigint = "0.4.4"
gcd = "2.3.0"
ndarray = "0.15.4"
ndarray-linalg = "0.16.0"
num = "0.4.0"
env_logger = "0.10.1"
log = "0.4.17"
chrono = "0.4.22"
